...
  <string name="need_to_allow_read_storage_permission">You need to allow read external storage permission</string>
  <string name="must_insert_issue_title">You must insert an issue title</string>
  <string name="must_choose_photo">You must choose a photo</string>
  <string name="must_choose_option">You must choose an option</string>
  <string name="couldnt_create_issue">Couldn\'t create new issue</string>

  <string name="valid_unused_username">The username is valid and unused</string>
  <string name="invalid_username">The username is invalid (Should have 8–20 characters. Special
        characters allowed: .,)
  </string>
  <string name="used_username">The username is already used</string>
  <string name="valid_unused_email">The e-mail is valid and unused</string>
  <string name="invalid_email">The e-mail is invalid</string>
  <string name="used_email">The e-mail is already used</string>
  <string name="valid_password">The password is valid</string>
  <string name="invalid_password">
        <![CDATA[The password is invalid (Should have 8–40 characters, including at least 1 uppercase and 1 lowercase letter, 1 digit. Special characters allowed: @&#$%)]]></string>
  <string name="matching_passwords">Both passwords match</string>
  <string name="not_matching_passwords">The passwords do not match</string>
  <string name="name">Name</string>
  <string name="surname">Surname</string>
  <string name="username">Username</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="validate_password">Validate password</string>
  <string name="choose_username">Choose a username</string>
  <string name="whats_your_name">What\'s your name?</string>
  <string name="continue_button">Continue</string>
  <string name="finish">Finish</string>
  <string name="choose_password">Choose a password</string>
  <string name="choose_email">What\'s your email?</string>
  <string name="surname_not_validated">You must enter your surname</string>
  <string name="name_not_validated">You must enter your name</string>
  <string name="signInWith">Sign in with:</string>
  <string name="sign_in">Sign in</string>
  <string name="registration">Register</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
...
