<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:ignore="MissingPrefix,Overdraw">

    <TextView
        android:id="@+id/title3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_password"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textColor="#000000"
        fontPath="fonts/Nunito-ExtraBold.ttf" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="22sp"
                android:textColor="#000"
                android:singleLine="true"
                android:hint="@string/password"
                tools:ignore="Deprecated"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/password_validation_icon"
                    android:contentDescription="@string/password_validation_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp" />

                <TextView
                    android:id="@+id/password_validation_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    fontPath="fonts/Nunito-SemiBold.ttf" />
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/grey">

            <EditText
                android:id="@+id/password2_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="22sp"
                android:textColor="#000"
                android:singleLine="true"
                android:hint="@string/validate_password"
                android:imeOptions="actionDone"
                tools:ignore="Deprecated"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

              <ImageView
                  android:id="@+id/password2_validation_icon"
                  android:contentDescription="@string/password_validation_icon"
                  android:layout_width="15dp"
                  android:layout_height="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/password2_validation_text"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    fontPath="fonts/Nunito-SemiBold.ttf" />
            </LinearLayout>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/green_bg_button"
        android:text="@string/finish"
        android:layout_marginTop="50dp"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:onClick="passwordButtonListener"
        fontPath="fonts/Nunito-Bold.ttf" />

</LinearLayout>